--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=demo
-spring.datasource.url=jdbc:mysql://localhost:3306/diary_management
+spring.datasource.url=jdbc:mysql://localhost:3306/diary_db
 spring.datasource.username=root
 spring.datasource.password=Tobelucky1.8!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
